no me elimine nada :p por favor

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Web Image</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -15,7 +15,7 @@
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
   <div class="logo">
-    <a href="http://zurb.com/stickers/images/intro-foundation.png"><img src="http://zurb.com/stickers/images/intro-foundation.png" /></a>
+    <a href="http://es.tinypic.com?ref=2dgm739" target="_blank"><img src="http://i59.tinypic.com/2dgm739.png" border="0" alt="Image and video hosting by TinyPic"></a>
   </div>
   <section class="top-bar-section">
     <!-- Right Nav Section -->
@@ -38,11 +38,16 @@
     <div class="row">
       <div class="large-12 columns">
         <div class="panel">
-                      <div class="file-inputs" text-aligne="center">
-                          <img src="images/YOURBUTTON.png">
-                <input type="file" class="hidden-input">
-                 <a href="#" class="small round button">Round Button</a><br/>  
+            <div class="small-centered columns" style="text-align: center;">
+                      <div class="file-inputs" >
+                          <img  align="middle" src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250">
+                          <br>
+                          <br>
+                            <input size="100"  style="width:35%" type="file" class="hidden-input">
+                          <br>
+                 <a href="#" class="small round button">Subir</a><br/>  
             </div>
+                </div>
         </div>
       </div>
     </div>
