cambie la imagen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
   <div class="logo">
-    <a href="http://es.tinypic.com?ref=2dgm739" target="_blank"><img src="http://i59.tinypic.com/2dgm739.png" border="0" alt="Image and video hosting by TinyPic"></a>
+    <a href="http://es.tinypic.com?ref=2i0zwow" target="_blank"><img src="http://i58.tinypic.com/2i0zwow.png" border="0" alt="Image and video hosting by TinyPic"></a>
   </div>
   <section class="top-bar-section">
     <!-- Right Nav Section -->
