--- a/public/Perfil.html
+++ b/public/Perfil.html
@@ -21,11 +21,11 @@
     <!-- Right Nav Section -->
     <ul class="center-buttons">
       <li class="divider"></li>
-      <li><a href="#">Ver</a></li>
+      <li><a href="Ver.html">Ver</a></li>
       <li class="divider"></li>
-      <li><a href="#">Subir</a></li>
+      <li><a href="subirx.php">Subir</a></li>
       <li class="divider"></li>
-      <li><a href="#">Perfil</a></li>
+      <li><a href="Perfil.html">Perfil</a></li>
       <li class="divider"></li>
     </ul>
   </section>
